--- a/main.html
+++ b/main.html
@@ -4,9 +4,92 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	 <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        .form-container {
+            max-width: 400px;
+            margin: 50px auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+        }
+        .form-container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        input[type="text"], input[type="checkbox"], select, button {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            font-size: 16px;
+        }
+        select {
+            height: auto;
+        }
+        button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 
 <body>
+	    <div class="form-container">
+        <h2>Dog Adoption Application</h2>
+        <form id="dog-adoption-form">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Name" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+            </div>
+            <div class="form-group">
+                <label for="address">Address</label>
+                <input type="text" id="address" name="address" placeholder="Address" required>
+            </div>
+            <div class="form-group">
+                <label>
+                    <input type="checkbox" id="checkbox" name="checkbox">
+                    Have you ever lived with a Dog before?
+                </label>
+            </div>
+            <div class="form-group">
+                <label for="multiSelect">Please select your preferred breeds</label>
+                <select id="multiSelect" name="multiSelect" multiple required>
+                    <option value="labrador">Labrador Retriever</option>
+                    <option value="german-shepherd">German Shepherd</option>
+                    <option value="golden-retriever">Golden Retriever</option>
+                    <option value="beagle">Beagle</option>
+                    <option value="bulldog">Bulldog</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
