--- a/main.html
+++ b/main.html
@@ -80,12 +80,10 @@
                     <option value="labrador">Labrador Retriever</option>
                     <option value="german-shepherd">German Shepherd</option>
                     <option value="golden-retriever">Golden Retriever</option>
-                    <option value="beagle">Beagle</option>
-                    <option value="bulldog">Bulldog</option>
                 </select>
             </div>
             <div class="form-group">
-                <button type="submit">Submit</button>
+                <button id="submit" type="submit">Submit</button>
             </div>
         </form>
     </div>
