--- a/main.html
+++ b/main.html
@@ -7,45 +7,34 @@
 </head>
 
 <body>
-	    <div class="form-container">
-        <h2>Dog Adoption Application</h2>
-        <form id="dog-adoption-form">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="Name" required>
-            </div>
-            <div class="form-group">
-                <label for="phone">Phone Number</label>
-                <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
-            </div>
-            <div class="form-group">
-                <label for="address">Address</label>
-                <input type="text" id="address" name="address" placeholder="Address" required>
-            </div>
-            
-            <div class="form-group">
-                <label for="multiSelect">Please select your preferred breeds</label>
-                <select id="multiSelect" name="multiSelect" multiple required>
-                    <option value="labrador">Labrador Retriever</option>
-                    <option value="german-shepherd">German Shepherd</option>
-                    <option value="golden-retriever">Golden Retriever</option>
-                </select>
-            </div>
-			<div class="form-group">
-                <label>
-                    <input type="checkbox" id="checkbox" name="checkbox">
-                    Have you ever lived with a Dog before?
-                </label>
-            </div>
-            <div class="form-group">
-                <button id="submit" type="submit">Submit</button>
-            </div>
-        </form>
-    </div>
+	<form action="/submit" method="POST">
+    
+    <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Name">
 
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+        <label for="phone">Phone Number</label>
+        <input type="text" id="phone" name="phone" placeholder="Phone Number">
+
+        <label for="address">Address</label>
+        <input type="text" id="address" name="address" placeholder="Address" required>
+
+        <div class="checkbox-label">
+            <input type="checkbox" id="checkbox" name="dogExperience" value="Have you ever lived with a Dog before?">
+            <label for="checkbox">Have you ever lived with a Dog before?</label>
+        </div>
+
+        <label for="multiSelect">Please select your preferred breeds</label>
+        <select id="multiSelect" name="breeds" multiple required>
+            <option value="labrador">Labrador</option>
+            <option value="german-shepherd">German Shepherd</option>
+            <option value="golden-retriever">Golden Retriever</option>
+            <option value="beagle">Beagle</option>
+            <option value="bulldog">Bulldog</option>
+        </select>
+
+        <input type="submit" id="submit" value="Submit">
+    </form>
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
